<resources>
    <string name="app_name">Karakterløft</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="back">Tilbage</string>
    <string name="help">Hjælp</string>
    <string name="three_dot_favorite">Favorit</string>
    <string name="three_dot_exit">Afslut</string>
    <string name="three_dot_settings">Indstillinger</string>
    <string name="default_mail_header">Kære Karakterløft Appteam: </string>
    <string name="default_mail_title">Default Storage</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="drawer_subjects">Emner</string>
    <string name="drawer_firebase">Firebase</string>
    <string name="drawer_other">Andet</string>
    <string name="drawer_come_see_us">Besøg os</string>
    <string name="drawer_store">Åbner Butikken</string>
    <string name="drawer_home">Hjem</string>
    <string name="drawer_buy_Course">Køb Kurser</string>
    <string name="drawer_communicate_with_us">Skriv til os</string>
    <string name="drawer_share">Del</string>
    <string name="drawer_open_new">Open New</string>
    <string name="drawer_gallery">Galleri</string>
    <string name="drawer_slideshow">Flipcards</string>
    <string name="drawer_tool">Værktøjer</string>
    <string name="drawer_camera">Cam</string>
    <string name="drawer_send">Send</string>
    <string name="drawer_we_are_here">Her holder vi til</string>
    <string name="drawer_kbh">København</string>
    <string name="drawer_odense">Odense</string>
    <string name="drawer_Aarhus">Aarhus</string>
    <string name="drawer_HQ">Hovedkvarter</string>
    <string name="drawer_URL_KBH">https://www.google.dk/maps/place/Sigurdsgade+26,+2200+K%C3%B8benhavn+N/@55.702761,12.5531248,17z/data=!3m1!4b1!4m5!3m4!1s0x4652525124df9de3:0x56181b7bc5385d44!8m2!3d55.702761!4d12.5553135</string>
    <string name="drawer_URL_HQ">https://www.google.dk/maps/place/Aspiri+A%2FS/@55.6804197,12.53155,17z/data=!3m1!4b1!4m5!3m4!1s0x465253bb7ef8ec77:0x4dc02be6470bb7fc!8m2!3d55.6804197!4d12.5337387</string>
    <string name="drawer_URL_Aarhus">https://www.google.dk/maps/place/VIA+University+College+-+Campus+Aarhus+C/@56.1560488,10.1880261,17z/data=!3m1!4b1!4m5!3m4!1s0x464c3fec300c1d71:0x357ff97e45c9d66a!8m2!3d56.1560488!4d10.1902148</string>
    <string name="drawer_URL_Odense">https://www.google.dk/maps/place/Tietgen+KompetenceCenter/@55.4118508,10.3236476,17z/data=!3m1!4b1!4m5!3m4!1s0x464ce081ea7d2395:0xb0164d1e4bc987c8!8m2!3d55.4118508!4d10.3258363</string>
    <string name="drawer_URL_ToTheStore">https://karakterloeft.aspiri.dk/UI/Shopping/CourseIndex.aspx</string>
    <string name="drawer_contact">Kontakt via mail</string>
    <string name="drawer_communicate">REPLACE ME</string>
    <string name="drawer_getInContact">kom i kontakt</string>
    <string name="drawer_mail_tekniske_problemer">Tekniske Problemer</string>
    <string name="drawer_mail_forbedringer">Idéer til forbedringer</string>
    <string name="drawer_quiz">Quiz</string>
    <string name="mail_subject">Vedrørende Aspiri App Android</string>
    <string name="mail_beginning">Kære Aspiri App team</string>
    <string name="title_activity_subject1">subject1</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_subject2">Subject2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject_picture_description">Andengradsligninger</string>
    <string name="sample_subject">Andengradsligning</string>
    <string name="sample_subject_breadtext">Lorem Ipsum Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum</string>
    <string name="empty_description" />
    <string-array name="subject_list">
        <item>Rentesregning</item>
        <item>Kvadratsætningerne</item>
        <item>Potensregneregler</item>
        <item>Polynomier</item>
        <item>Lineær, eksponentiel og potens</item>
        <item>Statistik</item>
        <item>Differentialregning</item>
        <item>Integralregning</item>
        <item>Logaritmer</item>
        <item>Geometri</item>
        <item>Plangeometri med vektorer</item>
        <item>Rumgeometri med vektorer</item>
        <item>Areal, omkreds og rumfang</item>
    </string-array>
    <string-array name="subtext_list">
        <item>Renter, terminer og start/slutbeløb.</item>
        <item>Omskrivningsregler.</item>
        <item>Regneregler for potensfunktioner.</item>
        <item>Nulpunkt og toppunkt.</item>
        <item>Lineær oog eksponentiel vækst.</item>
        <item>Frekvens, hyppighed og obs.</item>
        <item>Afledte funktioner.</item>
        <item>Integraler af et/flere led.</item>
        <item>Regning med logaritmer.</item>
        <item>Cirkler, *kanter og Cos/Sin relationer.</item>
        <item>Størrelser i plan.</item>
        <item>Størrelser i Rum.</item>
        <item>kegler, kugler og cylindre m.m.</item>

    </string-array>
    <string name="title_activity_settings_from_activity_gallery">Settings2</string>
    <string name="Title_Teori">Teori:</string>
    <string name="Title_ReviewProblems">Opgaver:</string>
    <string name="Title_Solutions">Løsningner:</string>
    <string name="ReviewProblems_Title">Opgaveeksempel:</string>
    <string name="mathModeXMLTest1">When \\(a \\ne 0\\), there are two solutions to \\(ax^2 + bx + c = 0\\) and they are $$x = {-b \\pm \\sqrt{b^2 - 4ac} \\over 2a}.$$</string>
    <string name="description_image_1">Questionmark</string>
    <string name="card_back_title">Sandsynligheden er 1/36</string>
    <string name="card_back_description">Begrundelsen til ovenstående svar, er som følger. \nDer er 1/6 sandsynlighed for at slå én sekser, 1/6 * 1/6 = 1/36</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>
    <string name="open_drawer">Opening drawer</string>
    <string name="close_drawer">Closing drawer</string>
    <string-array name="example_text_above_picture_3">
        <item>test</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>
    <string-array name="example_mathView1">
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
    </string-array>
    <string-array name="example_mathView2">
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
    </string-array>
    <string-array name="example_mathView3">
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
    </string-array>
    <string-array name="example_mathView4">
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
        <item>$x=\frac{1+y}{1+2z^2}$</item>
    </string-array>
</resources>