<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_store"
            android:icon="@drawable/ic_menu_store"
            android:title="@string/drawer_uy_Course" />

        <item
            android:id="@+id/drawer_send_us_mail"
            android:icon="@drawable/drawer_send"
            android:title="@string/drawer_contact" />

        <item
            android:id="@+id/drawer_flipcards"
            android:icon="@drawable/drawer_slideshow"
            android:title="@string/drawer_slideshow" />
    </group>

    <item android:title="@string/drawer_getInContact">
        <menu>
            <item
                android:id="@+id/drawer_send_us_mail_1"
                android:icon="@drawable/drawer_send"
                android:title="@string/drawer_mail_tekniske_problemer"/>
            <item
                android:id="@+id/drawer_send_us_mail_2"
                android:icon="@drawable/drawer_send"
                android:title="@string/drawer_mail_forbedringer"/>
        </menu>
    </item>

    <item android:title="@string/drawer_we_are_here">
        <menu>
            <item
                android:id="@+id/drawer_Kbh"
                android:icon="@drawable/drawer_gallery"
                android:title="@string/drawer_kbh" />
            <item
                android:id="@+id/drawer_Odense"
                android:icon="@drawable/drawer_gallery"
                android:title="@string/drawer_odense" />
            <item
                android:id="@+id/drawer_Aarhus"
                android:icon="@drawable/drawer_gallery"
                android:title="@string/drawer_Aarhus" />
            <item
                android:id="@+id/drawer_HQ"
                android:icon="@drawable/drawer_gallery"
                android:title="@string/drawer_HQ" />
        </menu>
    </item>

    <item android:title="@string/drawer_communicate">
        <menu>
            <item
                android:id="@+id/go_to_subject1"
                android:icon="@drawable/ic_game"
                android:title="goToSubject1" />
        </menu>
    </item>
    <item android:title="@string/drawer_communicate">
        <menu>
            <item
                android:id="@+id/drawer_share"
                android:icon="@drawable/drawer_share"
                android:title="@string/drawer_share"/>
            <item
                android:id="@+id/drawer_send"
                android:icon="@drawable/drawer_send"
                android:title="@string/drawer_send" />
        </menu>
    </item>

</menu>
