<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.newthinktank.menuexamples2.app.MainActivity" >



    <group android:checkableBehavior="single">

        <!--Tre ting i menubaren, hvor kun den ene er tilgængelig uden at åbne menuen-->
        <!-- "Mark Favorite", should appear as action button if possible -->

        <item
            android:id="@+id/addItem"
            android:icon="@drawable/ic_add_white_24dp"
            android:iconTint="@color/md_white_1000"
            android:title="@string/three_dot_favorite"
            android:visible="false"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/three_dot_quit"
            android:checkable="false"
            android:icon="@drawable/drawer_home"
            android:orderInCategory="101"
            android:title="@string/three_dot_exit"
            android:visible="true"
            app:showAsAction="collapseActionView" />

        <item
            android:id="@+id/three_dot_settings"
            android:checkable="false"
            android:icon="@android:color/black"
            android:orderInCategory="100"
            android:title="@string/three_dot_settings"
            android:visible="true"
            app:showAsAction="collapseActionView" />


    </group>

</menu>