<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="tie.hackathon.travelguide.destinations.description.FinalCityInfo">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/empty_description"
            android:scaleType="centerCrop"
            android:src="@drawable/aspiri" />


        <TextView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-bold"
            android:padding="10dp"
            android:text="@string/sample_subject"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.ms.square.android.expandabletextview.ExpandableTextView
            android:id="@+id/expand_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_subject_breadtext"
            expandableTextView:animDuration="200"
            expandableTextView:maxCollapsedLines="4">

            <TextView
                android:id="@id/expandable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#666666"
                android:textSize="16sp"
                android:visibility="visible" />

            <ImageButton
                android:id="@id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:background="@android:color/transparent"
                android:contentDescription="@string/empty_description"
                android:padding="16dp" />
        </com.ms.square.android.expandabletextview.ExpandableTextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/funfact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"

                android:backgroundTint="#000000"
                android:orientation="horizontal"
                android:padding="20dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/empty_description" />


                <TextView
                    android:id="@+id/fftext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"

                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</ScrollView>