<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        tools:context="com.example.s165158.aspiri.MainActivity">


        <TextView
            android:id="@+id/quiz_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-bold"
            android:padding="10dp"
            android:text="@string/sample_subject"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/quiz_image"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:contentDescription="@string/empty_description"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:text="@string/hello_blank_fragment" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1.0"
            android:text="@string/presstostart"
            android:textColor="#666666"
            android:textSize="16sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:baselineAligned="false"

            android:orientation="horizontal"
            android:padding="2dp">


            <LinearLayout
                android:id="@+id/option1_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/shadow"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="7dp"
                >


                <ImageView
                    android:id="@+id/option1_thumb"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/empty_description" />


                <TextView
                    android:id="@+id/option1_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"

                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="2dp">


            <LinearLayout
                android:id="@+id/option2_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/shadow"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="7dp"
                >


                <ImageView
                    android:id="@+id/option2_thumb"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/empty_description" />


                <TextView
                    android:id="@+id/option2_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"

                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="2dp">


            <LinearLayout
                android:id="@+id/option3_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/shadow"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="7dp"
                >


                <ImageView
                    android:id="@+id/option3_thumb"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/empty_description" />


                <TextView
                    android:id="@+id/option3_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"

                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="2dp">


            <LinearLayout
                android:id="@+id/option4_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/shadow"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="7dp"
                >


                <ImageView
                    android:id="@+id/option4_thumb"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/empty_description" />


                <TextView
                    android:id="@+id/option4_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"

                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
    
</LinearLayout>